# thalia

./: .flake8  .gitignore  .pre-commit-config.yaml  ARCHITECTURE_FIXES_2025-12-21.md  CONTRIBUTING.md  LICENSE  README.md  TESTFIX_PLAN.md  TEST_STATUS_REPORT.md  TODO.md  clean_build_artifacts.bat  clean_pycache.bat  coverage_results.json  mypy_results.txt  mypy_results_new.txt  profile_results.json  pyproject.toml  pyrightconfig.json  pytest.ini  requirements-dashboard.txt  requirements.txt  start_vscode.bat  test_consolidation_manager.py
.claude/: CLAUDE.md
.github/: copilot-instructions.md
.github/prompts/: meta_prompt.prompt.md  review_architecture.prompt.md  review_curriculum_strategy.prompt.md  review_documentation.prompt.md  review_test_quality.prompt.md
.github/workflows/: validate-docs.yml
docs/: AI_ASSISTANT_GUIDE.md  AUTO_DOCUMENTATION_OPPORTUNITIES.md  CHANGELOG.md  CODEBASE_IMPROVEMENTS.md  CONSOLIDATION_ACTION_PLAN.md  COPILOT_AVAILABLE_TOOLS.md  CURRICULUM_QUICK_REFERENCE.md  CURRICULUM_SAFETY_SYSTEM.md  DATASETS_QUICK_REFERENCE.md  DECISIONS.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_VALIDATION.md  GETTING_STARTED_CURRICULUM.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY_2025_12_08.md  MANIM_QUICK_REFERENCE.md  MONITORING_GUIDE.md  MULTILINGUAL_DATASETS.md  NOISE_IMPLEMENTATION_SUMMARY.md  NOISE_SYSTEM.md  PLANNING.md  README.md  REDUNDANCY_ANALYSIS.md  REFACTORING_OPPORTUNITIES.md  REFACTORING_SUMMARY.md  REGRESSION_TESTING.md  SAFETY_QUICK_START.md  SEMANTIC_CONFIG_MIGRATION_STATUS.md  TEST_FIX_SUMMARY.md  TEST_QUALITY_AUDIT_QUICK_REFERENCE.md  TEST_QUALITY_AUDIT_REPORT.md  TEST_QUALITY_P1_REFACTORING_SUMMARY.md  TEST_QUALITY_P3_REFACTORING_SUMMARY.md  Thalia_BrainArchitecture.drawio  VTA_LC_NB_Implementation_Plan.md  brain_review_implementation_plan.md  curriculum_strategy.md  implementation_plan.md  learning_implementation_plan.md  oscillator_pathology_detection.md  (+3 more)
docs/api/: API_INDEX.md  ARCHITECTURE_GUIDE.md  CHECKPOINT_FORMAT.md  COMPONENT_CATALOG.md  COMPONENT_RELATIONSHIPS.md  COMPUTE_FUNCTIONS_REFERENCE.md  CONFIGURATION_REFERENCE.md  CONSTANTS_REFERENCE.md  DATASETS_REFERENCE.md  DEPENDENCY_GRAPH.md  DIAGNOSTICS_REFERENCE.md  ENUMERATIONS_REFERENCE.md  EXCEPTIONS_REFERENCE.md  LEARNING_STRATEGIES_API.md  MIXINS_REFERENCE.md  MODULE_EXPORTS.md  NEURON_FACTORIES_REFERENCE.md  PROTOCOLS_REFERENCE.md  README.md  STATE_CLASSES_REFERENCE.md  TYPE_ALIASES.md  USAGE_EXAMPLES.md  VISUALIZATION_REFERENCE.md
docs/architecture/: ARCHITECTURE_OVERVIEW.md  BIOLOGICAL_ARCHITECTURE_SPEC.md  BRAIN_COORDINATION_INTEGRATION.md  BRAIN_CREATION_ANALYSIS.md  BRAIN_CREATION_ARCHITECTURE_REVIEW.md  CENTRALIZED_SYSTEMS.md  CONNECTIVITY_GAP_ANALYSIS.md  DYNAMIC_BRAIN_IMPLEMENTATION_PLAN.md  GOAL_HIERARCHY_IMPLEMENTATION_SUMMARY.md  HIERARCHICAL_GOALS_COMPLETE.md  INDEX.md  L6_TRN_FEEDBACK_LOOP.md  NEUROMODULATOR_CENTRALIZATION_COMPLETE.md  OSCILLATION_EMERGENCE_ANALYSIS.md  OSCILLATOR_INTEGRATION_COMPLETE.md  PATHWAY_SELECTION_GUIDE.md  PHASE2_MIGRATION_GUIDE.md  README.md  REFACTOR_EXPLICIT_AXONS_SYNAPSES.md  SIZE_ARCHITECTURE_REFACTORING.md  SIZE_REFACTORING_PHASE1_COMPLETE.md  SIZE_REFACTORING_PHASE2_COMPLETE.md  SIZE_REFACTORING_PROGRESS.md  SIZE_SPECIFICATION_REFACTORING_PLAN.md  SUPPORTING_COMPONENTS.md  UNIFIED_GROWTH_API.md
docs/archive/: CODEBASE_IMPROVEMENTS.md  CRITICAL_PERIODS_IMPLEMENTATION.md  CURRICULUM_VALIDATION_SUMMARY.md  DATASETS_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_PLAN.md  MANIM_IMPLEMENTATION.md  PHASE2_IMPLEMENTATION_STATUS.md  PHASE3_IMPLEMENTATION_STATUS.md  README.md  SPILLOVER_IMPLEMENTATION.md  TEST_IMPROVEMENT_PLAN.md  TEST_QUALITY_AUDIT.md  ablation_results.md  cognitive_load_implementation.md  complexity_mitigation_plan.md  critical_periods_integration.md  curriculum_implementation.md  hyperparameter_robustness_plan.md  implementation_plan.md  implementation_plan_brain_review.md  metacognition_implementation.md  oscillator_pathology_detection.md
docs/assets/: README.md
examples/: README.md  README_DASHBOARD.md  attractor_demo.py  basic_snn.py  brain_integration_demo.py  brain_regions_demo.py  chatbot.py  cognitive_load_demo.py  cortex_striatum_demo.py  cross_region_synchrony.py  curriculum_dashboard.py  curriculum_logging_demo.py  curriculum_training_example.py  daydream_demo.py  event_driven_brain_demo.py  gpu_visualization.py  hierarchical_demo.py  inner_speech_demo.py  interactive_demo.py  language_demo.py  metacognition_demo.py  multi_region_demo.py  multilingual_datasets_demo.py  stdp_demo.py  task_specific_datasets_demo.py  thinking_demo.py  visualize_brain.py  working_memory_demo.py  world_model_demo.py
experiments/: EXPERIMENT_PLAN.md  README.md
notebooks/: Thalia_Birth_Stage_Sensorimotor.ipynb
scripts/: analyze_auto_docs.py  analyze_coverage.py  auto_calibrate.py  calibrate_regions.py  compare_runs.py  comprehensive_diagnostics.py  generate_api_docs.py  generate_github_urls.py  pip_freeze.bat  predict_rate.py  profile_brain.py  profile_components.py  quick_brain_test.py  tee_writer.py  train.py  validate_docs.py
src/thalia/: units.py  (+5 more)
tests/: README.md  TEST_PR_CHECKLIST.md  TEST_PR_REVIEW_CHECKLIST.md  WRITING_TESTS.md  __init__.py  analyze_overhead.py  benchmark_learning.py  conftest.py  fix_adr005_tests.py  fix_test_assertions.py  fixtures.py  test_analysis_population.py  test_attractor.py  test_batched_dendrite_integration.py  test_bio_ranges.py  test_biophysics_registry.py  test_brain_regions.py  test_cognition.py  test_comparison_report.py  test_conductance_lif_kernel.py  test_core.py  test_cortical_inhibitory_kernel.py  test_daydream.py  test_encoding.py  test_evaluation.py  test_health_checks.py  test_hebbian.py  test_hierarchical.py  test_homeostatic.py  test_inhibitory_stdp.py  test_inner_speech.py  test_language.py  test_learning.py  test_manifold.py  test_memory.py  test_metacognition.py  test_metaplasticity.py  test_phase2_nmda_voltage_gate.py  test_predictive_attention.py  test_reward.py  (+12 more)
training/: README.md  README_sequence_learning.md  test_sequence_learning.py  thalia_birth_sensorimotor.py
(+1216 files in other folders)
