[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "thalia"
version = "0.1.0"
description = "Thinking Architecture via Learning Integrated Attractors - A framework for genuinely thinking spiking neural networks"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "THALIA Contributors" }
]
keywords = [
    "spiking-neural-networks",
    "SNN",
    "neuromorphic",
    "STDP",
    "attractor-networks",
    "cognitive-architecture",
    "artificial-intelligence"
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.20",
    "matplotlib>=3.4",
    "scipy>=1.7",
    "torch>=2.0",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "isort",
    "mypy",
    "ruff",
]
experiments = [
    "jupyter",
    "ipywidgets",
    "seaborn",
    "pandas",
]
all = [
    "thalia[dev,experiments]",
]

[project.urls]
Documentation = "https://github.com/username/thalia#readme"
Repository = "https://github.com/username/thalia"

[tool.hatch.build.targets.wheel]
packages = ["src/thalia"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
